--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-*/**/build
+# Xcode generated files
+build
+
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
+
+# Mac OS X generated files
+.DS_Store
